--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=Social_Media_Platform
+spring.datasource.url=jdbc:postgresql://localhost:5432/Social1
+spring.datasource.username=postgres
+spring.datasource.password=123321
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+
+spring.security.user.name=admin
+spring.security.user.password=43211
